--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "theme": "system",
-    "language": "en",
+    "theme": "dark",
+    "language": "bn",
     "ocr_options": {
         "deskew": false,
         "clean": false,
