--- a/config.json
+++ b/config.json
@@ -6,7 +6,9 @@
     "rotate": false,
     "force": true,
     "optimize": "0",
-    "use_gpu": false,
+    "use_gpu": true,
+    "gpu_device": "Auto",
+    "max_cpu_threads": 2,
     "ocr_options": {
         "deskew": false,
         "clean": false,
