gpu improvement still failde.., responsivness added.. translation done

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "theme": "dark",
-    "language": "bn",
+    "language": "en",
     "deskew": false,
     "clean": false,
     "rotate": false,
