--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
     "theme": "dark",
-    "language": "bn",
-    "ocr_language": "equ",
+    "language": "en",
+    "ocr_language": "ben",
     "last_used_ocr_languages": [
+        "ben",
         "eng"
     ],
     "deskew": false,
@@ -12,5 +13,9 @@
     "optimize": "0",
     "use_gpu": false,
     "gpu_device": "Auto",
+    "internal_packs": [
+        "osd",
+        "equ"
+    ],
     "max_cpu_threads": 2
 }
