--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,11 @@ _biplob_temp/
 *.log
 config.json
 history.json
+
+# Installer Build
+installer/output/
+*.exe
+!installer/python_installer.py
+
 # Keep tracking requirements.txt and other source files
+
