--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ test_*.py
 # Installer Build Output
 platforms/windows/installer/output/
 *.exe
+build/
+dist/
 
 # Temp files
 src/python/temp_extract/
